--- a/tests/dummy/app/index.html
+++ b/tests/dummy/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>ember-exclaim</title>
-    <meta name="description" content="">
+    <meta name="description" content="An addon allowing apps to expose declarative, JSON-configurable custom UIs backed by Ember components">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
